syntax = "proto3";

option go_package = "./rpc;rpc";

// The greeting service definition.
service RaftService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}

  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}

  rpc ClientCommand(ClientCommandRequest) returns (ClientCommandResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message RequestVoteRequest {
  uint32 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint32 last_log_term = 4;
}

message RequestVoteResponse {
  uint32 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  uint32 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint32 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  uint32 term = 1;
  bool success = 2;
}

message LogEntry {
  bytes data = 1;
}

message ClientCommandRequest {
  bytes metadata = 1;
  bytes command = 2;
  string client_id = 3;
}

message ClientCommandResponse {
  bytes result = 1;
}